<resources>
    <string name="app_name">Desenrola Aí</string>
    <string name="email">E-mail:</string>
    <string name="password">Senha:</string>
    <string name="create_new_account">Não tem conta? Cadastrar</string>
    <string name="login">Entrar</string>
    <string name="logo_img">Logo image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Endereço:</string>
    <string name="name">Nome:</string>
    <string name="return_to_sign_in">Já tem uma conta? Entrar</string>
    <string name="sign_up">Cadastrar</string>
    <string name="sign_out">Sair</string>
    <string name="home">Home</string>
    <string name="myProducts">Meus Produtos</string>
    <string name="description">Descrição:</string>
    <string name="categories">Categorias:</string>
    <string name="price_per_day">Preço por dia:</string>
    <string name="new_password">Nova senha:</string>
    <string name="my_profile">Meu Perfil</string>
    <string name="start_date">Data de início:</string>
    <string name="owner">Dono</string>
    <string name="number_of_days">Número de Dias:</string>
    <string name="total_price">Preço total:</string>
    <string name="order_borrow">Pedir Empréstimo</string>
    <string name="confirm_borrow">Confirmar Empréstimo</string>
    <string name="end_date">Data de Entrega:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="status">Status</string>
    <string name="add_product">ADICIONAR PRODUTO</string>
</resources>