<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.product_detail.ProductDetailFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.desenrolaai.screens.borrow_detail.BorrowDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                tools:context=".screens.map.MapFragment" />

            <TextView
                android:id="@+id/name_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/name_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.name}" />

            <TextView
                android:id="@+id/description_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/description_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.description}" />

            <TextView
                android:id="@+id/categories_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/categories_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.categories}" />

            <TextView
                android:id="@+id/price_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_per_day"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/price_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.price}" />

            <TextView
                android:id="@+id/owner_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owner"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/owner_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.owner}" />

            <LinearLayout
                android:id="@+id/confirm_borrow_extra"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <EditText
                    android:id="@+id/start_date_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    android:text="@{viewModel.startDay}" />

                <TextView
                    android:id="@+id/number_of_days_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <EditText
                    android:id="@+id/end_date_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    android:text="@{viewModel.endDay}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/holo_green_dark" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>