<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.product_detail.ProductDetailFragment">

    <data>
        <variable
            name="productDetailViewModel"
            type="com.example.desenrolaai.screens.product_detail.ProductDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/name_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{productDetailViewModel.name}"/>

            <TextView
                android:id="@+id/description_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <TextView
                android:id="@+id/description_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{productDetailViewModel.description}"/>

            <TextView
                android:id="@+id/categories_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categories" />

            <TextView
                android:id="@+id/categories_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{productDetailViewModel.categories}"/>

            <TextView
                android:id="@+id/address_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <TextView
                android:id="@+id/address_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{productDetailViewModel.address}"/>

            <TextView
                android:id="@+id/price_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_per_day" />

            <TextView
                android:id="@+id/price_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{productDetailViewModel.price}"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:text="Button" />

                <Button
                    android:id="@+id/reject_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/holo_red_dark"
                    android:text="Button" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>